--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  max-width: 24rem;
+  height: 30rem;
+  margin-left: 34%;
+  margin-top: 5%;
+  border-radius: 28px;
+  background: #f3f1f1;
+  box-shadow: 29px 29px 58px #e4e3e3,
+    -29px -29px 58px #ffffff;
+
 }
 
 .App-logo {
@@ -32,6 +41,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
