--- a/src/components/Form/index.css
+++ b/src/components/Form/index.css
@@ -1,5 +1,7 @@
 .f {
     background: #f3f1f1;
-    box-shadow: 6px 6px 20px #e4e3e3,
-        -6px -5px 20px #ffffff;
+}
+
+.header {
+    background: linear-gradient(to bottom, black 0%, black 25%, white 20%, #f3f1f1 100%);
 }
