--- a/src/components/Form/index.css
+++ b/src/components/Form/index.css
@@ -6,6 +6,10 @@
     background: linear-gradient(to bottom, black 0%, black 25%, white 20%, #f3f1f1 100%);
 }
 
-input:focus { 
-    border: 2px dashed black;
+input:active { 
+    border: 2px dashed black;;
+}
+
+.g {
+    text-shadow: -1.0px -0.5px  black, 0 1px black, 1px 0 black, 0 -1px black;
 }
