completed the logics

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   height: 30rem;
   margin-left: 34%;
   margin-top: 5%;
+  position: absolute;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
