--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,7 @@
 @import "tailwindcss/utilities";
 
 .App {
-  text-align: center;
-  max-width: 24rem;
-  height: 30rem;
-  margin-left: 34%;
-  margin-top: 5%;
-  border-radius: 28px;
+  position: absolute;
   background: #f3f1f1;
   box-shadow: 29px 29px 58px #e4e3e3,
     -29px -29px 58px #ffffff;
