--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center;
-  max-width: 24rem;
-  height: 30rem;
+  max-width: 40%;
+  height: auto;
   margin-left: 34%;
   margin-top: 5%;
-  position: absolute;
+
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
