--- a/src/components/Form/index.css
+++ b/src/components/Form/index.css
@@ -2,20 +2,10 @@
     transition: all 0.2s smooth;
 }
 
-.f {
-    background: #f3f1f1;
-}
-
-.header {
-    background: linear-gradient(to bottom, black 0%, black 20%, white 0%, #f3f1f1 100%);
-    position: absolute;
-    width: 25rem;
-}
-
-input:active { 
-    border: 2px dashed black;;
+input[type=text]:focus {
+    border: 2px dashed white;
 }
 
 .g {
-    text-shadow: -1.0px -0.5px  black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-shadow: -1.0px -0.5px black, 0 1px black, 1px 0 black, 0 -1px black;
 }
