--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,12 @@
 @import "tailwindcss/utilities";
 
 .App {
-  position: absolute;
+  text-align: center;
+  max-width: 4rem;
+  height: 30rem;
+  margin-left: 34%;
+  margin-top: 5%;
+  border-radius: 28px;
   background: #f3f1f1;
   box-shadow: 29px 29px 58px #e4e3e3,
     -29px -29px 58px #ffffff;
